--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             appendMessage(userInput, 'user');
 
             try {
-                const response = await fetch('/gemini', {
+                const response = await fetch('https://distress-chatbot.onrender.com//gemini', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
